// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Signup Default smoke-test 1`] = `
<div class="overflow-hidden">
  <ul class="inline-flex rounded-lg bg-grey-2 p-2 gap-3 w-full overflow-x-auto justify-center"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="true"
      >
        Compte sans mot de passe
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="false"
      >
        Compte avec mot de passe
      </button>
    </li>
  </ul>
  <div id="tabpanel-0"
       class
       role="tabpanel"
       aria-labelledby="tab-0"
       tabindex="0"
       label="Compte sans mot de passe"
  >
    <form class="flex flex-col gap-4">
      <div class="flex-grow flex flex-col gap-3">
        <label>
          <div class="font-medium text-grey-8">
            Nom de la collectivité
          </div>
        </label>
        <button aria-expanded="false"
                aria-label="ouvrir le menu"
                class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
                type="button"
        >
          <div class="flex px-4 min-h-[3rem] py-2">
            <div class="flex grow flex-wrap gap-2 mr-4">
              <div class="flex items-center gap-2 grow">
                <div data-test="Badge-undefined"
                     class="bg-grey-1 border-grey-5 flex items-center gap-1 max-w-max px-3 py-1 border border-solid rounded"
                >
                  <span class="text-grey-8 font-bold uppercase leading-4 text-left line-clamp-1 mt-0.5 text-sm">
                    Grenoble
                  </span>
                  <div class="flex rounded-full cursor-pointer">
                    <span class="ri-close-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-primary-7">
                    </span>
                  </div>
                </div>
              </div>
              <input type="text"
                     class="w-full text-sm outline-0 placeholder:text-grey-6 py-1"
                     placeholder="Rechercher par mots-clés"
                     value
              >
            </div>
            <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
            </span>
          </div>
        </button>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label for="email">
          <div class="font-medium text-grey-8">
            Email de connexion
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
                 id="email"
                 name="email"
          >
        </div>
      </div>
      <hr class="mt-5">
      <div class="flex gap-2 min-w-min">
        <input id=":r1:"
               type="checkbox"
               class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4 font-medium"
               name="cgu_acceptees"
        >
        <div class="flex flex-col gap-1">
          <label for=":r1:"
                 class="inline-flex items-center cursor-pointer font-medium text-grey-8"
          >
            J’accepte le cadre d’utilisation de la plateforme (obligatoire)
          </label>
          <div class="flex items-center text-grey-7 my-auto">
            <a href="https://territoiresentransitions.fr/cgu"
               class="bg-none after:hidden w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
            >
              Les conditions générales
            </a>
            <span class="text-sm mx-2">
              |
            </span>
            <a href="https://www.ademe.fr/donnees-personnelles/"
               class="bg-none after:hidden w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
            >
              la politique de protection des données de l'ADEME
            </a>
          </div>
        </div>
      </div>
      <div class="flex gap-2 min-w-min">
        <input id=":r2:"
               type="checkbox"
               class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
               name="collectivite_engagee"
        >
        <div class="flex flex-col gap-1">
          <label for=":r2:"
                 class="inline-flex items-center cursor-pointer font-medium text-grey-8"
          >
            Collectivité engagée dans le programme Territoire Engagé Transition Ecologique
          </label>
        </div>
      </div>
      <hr class="mt-4">
      <div class="flex gap-4 justify-end">
        <button type="button"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
        >
          Annuler
        </button>
        <button type="submit"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6 flex-row-reverse"
        >
          <span class="ri-arrow-right-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
          </span>
          Passer à l'étape 2
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/Signup Etape1AvecMdp smoke-test 1`] = `
<div class="overflow-hidden">
  <ul class="inline-flex rounded-lg bg-grey-2 p-2 gap-3 w-full overflow-x-auto justify-center"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        Compte sans mot de passe
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        Compte avec mot de passe
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Compte avec mot de passe"
  >
    <form class="flex flex-col gap-4">
      <div class="flex-grow flex flex-col gap-3">
        <label>
          <div class="font-medium text-grey-8">
            Nom de la collectivité
          </div>
        </label>
        <button aria-expanded="false"
                aria-label="ouvrir le menu"
                class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
                type="button"
        >
          <div class="flex px-4 min-h-[3rem] py-2">
            <div class="flex grow flex-wrap gap-2 mr-4">
              <input type="text"
                     class="w-full text-sm outline-0 placeholder:text-grey-6"
                     placeholder="Rechercher par mots-clés"
                     value
              >
            </div>
            <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
            </span>
          </div>
        </button>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label for="email">
          <div class="font-medium text-grey-8">
            Email de connexion
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
                 id="email"
                 name="email"
          >
        </div>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label for="password">
          <div class="font-medium text-grey-8">
            Mot de passe
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="password"
                 class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
                 id="password"
                 name="password"
          >
          <button title="Voir le mot de passe"
                  class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          >
            <span class="ri-eye-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
            </span>
          </button>
        </div>
      </div>
      <hr class="mt-5">
      <div class="flex gap-2 min-w-min">
        <input id=":r4:"
               type="checkbox"
               class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4 font-medium"
               name="cgu_acceptees"
        >
        <div class="flex flex-col gap-1">
          <label for=":r4:"
                 class="inline-flex items-center cursor-pointer font-medium text-grey-8"
          >
            J’accepte le cadre d’utilisation de la plateforme (obligatoire)
          </label>
          <div class="flex items-center text-grey-7 my-auto">
            <a href="https://territoiresentransitions.fr/cgu"
               class="bg-none after:hidden w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
            >
              Les conditions générales
            </a>
            <span class="text-sm mx-2">
              |
            </span>
            <a href="https://www.ademe.fr/donnees-personnelles/"
               class="bg-none after:hidden w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
            >
              la politique de protection des données de l'ADEME
            </a>
          </div>
        </div>
      </div>
      <div class="flex gap-2 min-w-min">
        <input id=":r5:"
               type="checkbox"
               class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
               name="collectivite_engagee"
        >
        <div class="flex flex-col gap-1">
          <label for=":r5:"
                 class="inline-flex items-center cursor-pointer font-medium text-grey-8"
          >
            Collectivité engagée dans le programme Territoire Engagé Transition Ecologique
          </label>
        </div>
      </div>
      <hr class="mt-4">
      <div class="flex gap-4 justify-end">
        <button type="button"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
        >
          Annuler
        </button>
        <button type="submit"
                disabled
                class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6 flex-row-reverse"
        >
          <span class="ri-arrow-right-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-3">
          </span>
          Passer à l'étape 2
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/Signup Etape2 smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    <div class="flex-grow flex flex-col gap-3">
      <label for="nom">
        <div class="font-medium text-grey-8">
          Nom
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="nom"
               name="nom"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label for="prenom">
        <div class="font-medium text-grey-8">
          Prénom
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="prenom"
               name="prenom"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label for="tel">
        <div class="font-medium text-grey-8">
          Numéro de téléphone
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="tel"
               name="tel"
        >
      </div>
      <div class="flex items-center text-info-1">
        <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
        </span>
        <span class="text-xs">
          L'accès à votre numéro est réservé à l'équipe ADEME de l'outil et le contact par mail restera privilégié
        </span>
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label>
        <div class="font-medium text-grey-8">
          Rôle
        </div>
      </label>
      <button aria-expanded="false"
              aria-label="ouvrir le menu"
              class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
              type="button"
      >
        <div class="flex px-4 min-h-[3rem] py-2">
          <div class="flex grow flex-wrap gap-2 mr-4">
            <span class="my-auto text-left text-xs text-grey-6 line-clamp-1">
              Sélectionner une option
            </span>
          </div>
          <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
          </span>
        </div>
      </button>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label for="poste">
        <div class="font-medium text-grey-8">
          Intitulé de poste
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="poste"
               name="poste"
        >
      </div>
    </div>
  </div>
  <hr class="mt-4">
  <div class="flex gap-4 justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Annuler
    </button>
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;
